--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
+  flutter_riverpod: ^2.6.1
+  flutter_hooks: ^0.20.5
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
